# kino

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
crates/kino-cli/: Cargo.toml
crates/kino-cli/examples/: encoding_demo.sh
crates/kino-cli/src/: commands.rs  encoding.rs  frequency.rs  main.rs
crates/kino-core/: Cargo.toml
crates/kino-core/benches/: core_benchmark.rs
crates/kino-core/examples/: basic_playback.rs  branding.rs  captions.rs  drm_setup.rs
crates/kino-core/src/: analytics.rs  branding.rs  buffer.rs  captions.rs  drm.rs  error.rs  lib.rs  types.rs
crates/kino-core/src/manifest/: hls.rs
crates/kino-core/tests/: integration_tests.rs
crates/kino-desktop/: Cargo.toml
crates/kino-desktop/src/: lib.rs  player.rs  window.rs
crates/kino-frequency/: Cargo.toml  README.md
crates/kino-frequency/benches/: fingerprint_benchmark.rs
crates/kino-frequency/examples/: basic_analysis.rs  content_similarity.rs  streaming_analysis.rs  video_processing.rs
crates/kino-frequency/src/: fft.rs  fingerprint.rs  lib.rs  solana.rs  streaming.rs  types.rs
crates/kino-mcp/: Cargo.toml
crates/kino-mcp/src/: main.rs
crates/kino-python/: Cargo.toml  README.md  pyproject.toml
crates/kino-python/examples/: basic_analysis.py  batch_processing.py  jupyter_notebook_demo.py  realtime_visualization.py
crates/kino-python/src/: lib.rs
crates/kino-tauri/: Cargo.toml  tauri.conf.json
crates/kino-tauri/src/: commands.rs  lib.rs  main.rs
crates/kino-wasm/: Cargo.toml
crates/kino-wasm/examples/: browser-frequency.html
crates/kino-wasm/src/: abr_controller.rs  analytics.rs  branding.rs  buffer_controller.rs  frequency.rs  lib.rs
crates/psm-player-cli/: Cargo.toml
crates/psm-player-cli/src/: commands.rs  encoding.rs  frequency.rs  main.rs  output.rs
crates/psm-player-core/: Cargo.toml
crates/psm-player-core/examples/: basic_playback.rs  branding.rs  captions.rs  drm_setup.rs
crates/psm-player-core/src/: abr.rs  analytics.rs  branding.rs  buffer.rs  captions.rs  error.rs  lib.rs  session.rs  types.rs
crates/psm-player-core/src/manifest/: dash.rs  hls.rs  mod.rs
crates/psm-player-core/tests/: integration_tests.rs
crates/psm-player-desktop/: Cargo.toml
crates/psm-player-desktop/src/: controls.rs  lib.rs  player.rs  window.rs
crates/psm-player-frequency/: Cargo.toml  README.md
crates/psm-player-frequency/benches/: fingerprint_benchmark.rs
crates/psm-player-frequency/examples/: basic_analysis.rs  content_similarity.rs  streaming_analysis.rs  video_processing.rs
crates/psm-player-frequency/src/: fft.rs  fingerprint.rs  lib.rs  recommend.rs  solana.rs  streaming.rs  tagging.rs  thumbnail.rs
crates/psm-player-python/: Cargo.toml  README.md  pyproject.toml
crates/psm-player-python/examples/: basic_analysis.py  batch_processing.py  jupyter_notebook_demo.py  realtime_visualization.py
crates/psm-player-python/src/: lib.rs
crates/psm-player-tauri/: Cargo.toml  tauri.conf.json
crates/psm-player-tauri/src/: commands.rs  lib.rs  main.rs
crates/psm-player-wasm/: Cargo.toml
crates/psm-player-wasm/examples/: browser-frequency.html
crates/psm-player-wasm/src/: abr_controller.rs  analytics.rs  branding.rs  buffer_controller.rs  frequency.rs  lib.rs
docker/: entrypoint.sh  nginx.conf
docs/: BUSINESS_PROPOSAL.md
embed/: generator.html  kino-player.js  psm-player.js  widget.html
examples/: basic_analysis.rs
examples/python/: analyze_audio.py
examples/react/: FrequencyAnalysisDemo.tsx
examples/rust/: frequency_analysis.rs
examples/web/: index.html  player.js
mcp-server/: README.md  index.js  package-lock.json  package.json
scripts/: build-all.sh
server/: package.json
server/src/: index.js
site/: deck.html  index.html
specs/tla/: PSMAbrAlgorithm.cfg  PSMAbrAlgorithm.tla  PSMBufferController.cfg  PSMBufferController.tla  PSMCaptions.cfg  PSMCaptions.tla  PSMConcurrentStreaming.cfg  PSMConcurrentStreaming.tla  PSMDrm.cfg  PSMDrm.tla  PSMPlayer.cfg  PSMPlayer.tla  PSMPlayerState.cfg  PSMPlayerState.tla  PSMPlaylist.cfg  PSMPlaylist.tla  README.md
tools/encoding/: encode-hls.sh  encode.js
web/: analytics.html  index.html
