[workspace]
resolver = "2"
members = [
    "crates/psm-player-core",
    "crates/psm-player-desktop",
    "crates/psm-player-wasm",
    "crates/psm-player-tauri",
    "crates/psm-player-cli",
    "crates/psm-player-frequency",
    "crates/psm-player-python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Purple Squirrel Media <dev@purplesquirrel.media>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/purplesquirrel-media/psm-player"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP/Networking
reqwest = { version = "0.12", features = ["json", "stream"] }
url = { version = "2.5", features = ["serde"] }

# Media parsing
nom = "8"
m3u8-rs = "6"
bytes = "1.9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Crypto (for DRM)
ring = "0.17"
base64 = "0.22"

# Internal crates
psm-player-core = { path = "crates/psm-player-core" }
psm-player-frequency = { path = "crates/psm-player-frequency" }

# FFT and signal processing
rustfft = "6.2"
realfft = "3.4"
num-complex = "0.4"
ndarray = "0.16"

# Audio processing
hound = "3.5"
symphonia = "0.5"

# Image processing
image = "0.25"
