[workspace]
resolver = "2"
members = [
    "crates/kino-core",
    "crates/kino-desktop",
    "crates/kino-wasm",
    "crates/kino-tauri",
    "crates/kino-cli",
    "crates/kino-frequency",
    "crates/kino-python",
]
default-members = [
    "crates/kino-core",
    "crates/kino-desktop",
    "crates/kino-tauri",
    "crates/kino-cli",
    "crates/kino-frequency",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Purple Squirrel Media <dev@purplesquirrel.media>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/purplesquirrel-media/kino"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP/Networking
reqwest = { version = "0.12", features = ["json", "stream"] }
url = { version = "2.5", features = ["serde"] }

# Media parsing
nom = "8"
m3u8-rs = "6"
bytes = "1.9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Crypto (for DRM)
ring = "0.17"
base64 = "0.22"

# Internal crates
kino-core = { path = "crates/kino-core" }
kino-frequency = { path = "crates/kino-frequency" }

# FFT and signal processing
rustfft = "6.2"
realfft = "3.4"
num-complex = "0.4"
ndarray = "0.16"

# Audio processing
hound = "3.5"
symphonia = "0.5"

# Image processing
image = "0.25"
