[package]
name = "kino-cli"
description = "CLI video player for transcoding, QC validation, and analytics extraction for Kino"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kino-cli"
path = "src/main.rs"

[dependencies]
kino-core = { workspace = true }
kino-frequency = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

# CLI
clap = { version = "4", features = ["derive"] }

# Output formatting
tabled = "0.17"
indicatif = "0.17"
console = "0.15"
