[package]
name = "kino-core"
description = "Core video player library - HLS/DASH parsing, buffer management, and playback control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["hls", "dash"]
hls = []
dash = []
drm = ["ring"]
analytics = []

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP
reqwest = { workspace = true }
url = { workspace = true }

# Parsing
nom = { workspace = true }
m3u8-rs = { workspace = true }
bytes = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Optional: DRM support
ring = { workspace = true, optional = true }
base64 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
