[package]
name = "kino-python"
description = "Python bindings for Kino frequency analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "kino_frequency"
crate-type = ["cdylib"]

[dependencies]
kino-frequency = { workspace = true }
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
