[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kino-frequency"
version = "0.1.0"
description = "Python bindings for Kino frequency analysis"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Purple Squirrel Media", email = "dev@purplesquirrel.media" }
]
keywords = ["audio", "frequency", "fft", "fingerprint", "music"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "numpy>=1.20",
]
visualization = [
    "numpy>=1.20",
    "matplotlib>=3.5",
    "sounddevice>=0.4",
]

[project.urls]
Homepage = "https://purplesquirrel.media"
Repository = "https://github.com/purplesquirrel-media/kino"
Documentation = "https://docs.purplesquirrel.media/frequency"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "kino_frequency"
