[package]
name = "kino-wasm"
description = "WebAssembly video streaming library for Kino"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# NOTE: kino-core excluded - uses tokio which doesn't compile to WASM
# We implement WASM-compatible versions here instead
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlVideoElement",
    "HtmlMediaElement",
    "MediaSource",
    "SourceBuffer",
    "TimeRanges",
    "MediaSourceReadyState",
    "console",
    "Performance",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
