[package]
name = "psm-player-frequency"
description = "Audio frequency analysis for Purple Squirrel Media - fingerprinting, auto-tagging, and content recommendations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["fingerprint", "tagging", "thumbnail", "recommend"]
fingerprint = []
tagging = []
thumbnail = []
recommend = []
solana = ["dep:solana-sdk", "dep:anchor-lang"]

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID
uuid = { workspace = true }

# Crypto for fingerprint hashing
ring = { workspace = true }
base64 = { workspace = true }

# FFT and signal processing
rustfft = "6.2"
realfft = "3.4"
num-complex = "0.4"
ndarray = "0.16"

# Audio processing
hound = "3.5"           # WAV file reading
symphonia = "0.5"       # Multi-format audio decoding

# Image processing for thumbnails
image = "0.25"

# ML inference (optional, for advanced tagging)
ort = { version = "2.0.0-rc.9", optional = true }  # ONNX Runtime

# Solana integration (optional)
solana-sdk = { version = "1.18", optional = true }
anchor-lang = { version = "0.29", optional = true }

# Internal crates
psm-player-core = { path = "../psm-player-core" }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.14"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bench]]
name = "fingerprint_benchmark"
harness = false
