[package]
name = "psm-player-tauri"
description = "Cross-platform desktop video player using Tauri for Purple Squirrel Media"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "psm-player"
path = "src/main.rs"

[dependencies]
psm-player-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

# Tauri
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
